# puc-projeto-final

./: .gitattributes  .gitignore  README.md  data_processing.py  pyproject.toml  reddit_scrapper.py
config/: system_messages.json
data/: aita_submissions_br.csv  aita_submissions_de.csv  aita_submissions_es.csv  aita_submissions_fr.csv  embeddings.csv  moral_dilemmas.csv  moral_dilemmas_br.csv  moral_dilemmas_cleaned.csv  moral_dilemmas_es.csv
results/: actor_wise_analysis_results.json  anova_table.json  anova_table_pingouin.json  embedding_analysis.html  gameshowell_filtered.json  scenario_wise_analysis_results.json  tukey_filtered.json
results/base/: actor_wise_analysis_results.json  cross_analysis_results.json  reason_similarities.pkl  reason_wise_analysis_results.json  scenario_wise_analysis_results.json
results/br/: actor_wise_analysis_results.json  cross_analysis_results.json  reason_similarities.pkl  reason_wise_analysis_results.json  row_similarities.pkl  scenario_wise_analysis_results.json
results/de/: actor_wise_analysis_results.json  cross_analysis_analysis_results.json  cross_analysis_results.json  reason_similarities.pkl  reason_wise_analysis_results.json  (+2 more)
scripts/: anova_analysis.ipynb  anova_analysis.py  data_cleaning.py  data_cleaning_international.py  embedding_analysis.py  embedding_analysis_de.py  embedding_analysis_international.py  embedding_utils.py  generate_embeddings.py  llm_cleaning_international.py  llm_prompting_international.py  preprocess_deprecated.py  process_data.py  scrapper_deprecated.py  verdict_analysis.ipynb
(+13 files in other folders)
